examples/test/testpolicy11609.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11609
  namespace: namespace92
spec:
  podSelector:
    matchLabels:
      key26: value28
      key30: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value24
      podSelector:
        matchLabels:
          key0: value39
          key36: value10
